airs\refac(cross): #3157 new forces page design
- Update forces page to the new design


Former-commit-id: d9f4fd5d2a9dad793e7d661c1b95b54c478032d9

--- a/airs/theme/2020/templates/products/drills.html
+++ b/airs/theme/2020/templates/products/drills.html
@@ -78,9 +78,9 @@
       </a>
     </li>
     <li class="dib ph2">
-      <a href="{{ SITEURL }}/products/drills/"
+      <a href="{{ SITEURL }}/products/skims/"
       class="c-fluid-gray f4 roboto fw7 no-underline">
-        drills
+        Skims
       </a>
     </li>
     <li class="dib ph2 bb bc-hover-red bw2">
