--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -242,6 +242,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .fheader { font-size: 144px; }
 .w-footer-form { width: 18.75rem; }
 .sqr-card { min-height: 400px; width: 400px; }
+.w-benefit { width: 400px; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 961px) and (max-width: 1200px) {
@@ -367,6 +368,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .pl-body { padding-left: 3.75rem; }
   .w-footer-form { width: 30%; }
   .mw-20 { max-width: 20rem; }
+  .w-benefit { width: 33%; }
 }
 
 //Very large screens
@@ -1071,7 +1073,6 @@ video {
     min-height: 300px;
     padding: 0 2rem;
     vertical-align: top;
-    width: 400px;
     h3 {
       color: $fluid-black;
       font-size: 24px;
@@ -1093,7 +1094,7 @@ video {
   border-bottom: 4px solid $button-hover;
 }
 
-.drills-features.product-features {
+.other-features.product-features {
   .sect2 {
     min-height: 470px !important;
   }
