--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -146,7 +146,7 @@
       src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-s.png"
       alt="Young hacker smiling">
     </div>
-    <div class="w-50-l fr-l ph0-l ph4">
+    <div class="w-50-l fr-l ph-body">
       <ul class="tl roboto list pl0 mw-20">
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
@@ -210,7 +210,7 @@
       src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-s.png"
       alt="Young hacker smiling">
     </div>
-    <div class="w-50-l fl-l ph0-l ph4">
+    <div class="w-50-l fl-l ph-b">
       <ul class="tr-l tl roboto list pl0 mw-20 fr-l">
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
