--- a/airs/theme/2020/templates/base.html
+++ b/airs/theme/2020/templates/base.html
@@ -162,7 +162,7 @@
       {% endfor %}
       {% for LOC in LOCALE %}
         <meta property="og:locale"
-              content="{{ LOC }}">
+              content="en_US">
       {% endfor %}
       <meta property="og:site_name"
             content="{{ SITENAME }}">
