--- a/airs/theme/2020/templates/error.html
+++ b/airs/theme/2020/templates/error.html
@@ -162,7 +162,10 @@
       {% endfor %}
       {% for LOC in LOCALE %}
         <meta property="og:locale"
-              content="{{ LOC }}">
+              content="en_US">
+        <meta name="title"
+              property="og:title"
+              content="Error: 404 Nothing found | {{ SITENAME }}">
       {% endfor %}
       <meta property="og:site_name"
             content="{{ SITENAME }}">
