--- a/airs/theme/2020/templates/index.html
+++ b/airs/theme/2020/templates/index.html
@@ -6,6 +6,23 @@
         and ethical hacking recent trends.">
   <meta name="keywords"
         content="Blog, Articles, Opinion, Challenge, Pentesting, Security, Ethical Hacking, Trends">
+  <meta name="url"
+        property="og:url"
+        content="{{ SITEURL }}/{{ articles_page.url }}">
+  <meta name="title"
+        property="og:title"
+        content="Blog | {{ SITENAME }}">
+  <meta name="description"
+        property="og:description"
+        content="Read Fluid Attacks' blog posts about IT, pentesting,
+        hacking challenges writeups, information security,
+        and ethical hacking recent trends.">
+  <meta name="image"
+        property="og:image"
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+  <meta name="type"
+        property="og:type"
+        content="website">
 {% endblock meta %}
 
 {% block canonical %}
