--- a/airs/theme/2020/templates/search.html
+++ b/airs/theme/2020/templates/search.html
@@ -8,6 +8,18 @@
         footer.">
   <meta name="keywords"
         content="Results, Search, Pages, String, Links, Request">
+  <meta name="description"
+        property="og:description"
+        content="This page shows the results of the requested search. It lists links to
+        all the pages that contain the string searched. If the string was not
+        found, no articles will be listed, try browsing using the menu or the
+        footer.">
+  <meta name="image"
+        property="og:image"
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+  <meta name="type"
+        property="og:type"
+        content="website">
 {% endblock meta %}
 
 {% block title %} Search | {{ SITENAME }}{% endblock %}
