--- a/airs/theme/2020/templates/authors.html
+++ b/airs/theme/2020/templates/authors.html
@@ -8,6 +8,21 @@
         field of Information Security.">
   <meta name="keywords"
         content="Authors, Blog, Publish, Article, Information, Security">
+  <meta name="title"
+        property="og:title"
+        content="Blog Authors | {{ SITENAME }}">
+  <meta name="description"
+        property="og:description"
+        content="Here you can find the list of all the authors that have contributed to
+        the blog by publishing an article which may have an opinion, a solution
+        to a challenge, or just general information related to many topics in the
+        field of Information Security.">
+  <meta name="image"
+        property="og:image"
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+  <meta name="type"
+        property="og:type"
+        content="website">
 {% endblock meta %}
 
 {% block title %} Authors | {{ SITENAME }}{% endblock title %}
