--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -7,6 +7,23 @@
       and software vulnerabilities ASAP.">
 <meta name="keywords"
       content="{Fluid Attacks, Pentesting, Ethical Hacking, Security Testing, Cybersecurity">
+<meta name="url"
+      property="og:url"
+      content="{{ SITEURL }}/">
+<meta name="title"
+      property="og:title"
+      content="Home | {{ SITENAME }}">
+<meta name="description"
+      property="og:description"
+      content="We're a pentesting and ethical hacking company
+      that identifies and reports all your applications
+      and software vulnerabilities ASAP.">
+<meta name="image"
+      property="og:image"
+      content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+<meta name="type"
+      property="og:type"
+      content="website">
 {% endblock meta %}
 
 {% block title %}Home | {{ SITENAME }}{% endblock title %}
