--- a/airs/theme/2020/templates/products/integrates.html
+++ b/airs/theme/2020/templates/products/integrates.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 {% block meta %}
-<meta name="description"
-      content="Integrates is a platform
-      that provides information such as security findings,
-      criticality, occurrences, among other data
-      to all project stakeholders.">
-<meta name="keywords"
-      content="Fluid Attacks, Products, Integrates, Stakeholders,
-      Security, Red Team Platform, Pentesting, Ethical Hacking">
+  <meta name="description"
+        content="{{ page.description }}">
+  <meta name="keywords"
+        content="{{ page.keywords }}">
+  <meta name="url"
+        property="og:url"
+        content="{{ SITEURL }}/{{ page.url }}">
+  <meta name="title"
+        property="og:title"
+        content="{{ page.title }} | {{ SITENAME }}">
+  <meta name="description"
+        property="og:description"
+        content="{{ page.description }}">
+  <meta name="image"
+        property="og:image"
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+  <meta name="type"
+        property="og:type"
+        content="website">
 {% endblock meta %}
 
 {% block title %}
