--- a/airs/theme/2020/templates/solution.html
+++ b/airs/theme/2020/templates/solution.html
@@ -4,6 +4,21 @@
       content="{{ page.description }}">
 <meta name="keywords"
       content="{{ page.keywords }}">
+<meta name="url"
+      property="og:url"
+      content="{{ SITEURL }}/{{ page.url }}">
+<meta name="title"
+      property="og:title"
+      content="{{ page.title }} | {{ SITENAME }}">
+<meta name="description"
+      property="og:description"
+      content="{{ page.description }}">
+<meta name="image"
+      property="og:image"
+      content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+<meta name="type"
+      property="og:type"
+      content="website">
 {% endblock meta %}
 
 {% block title %}
