--- a/airs/theme/2020/templates/thank-you.html
+++ b/airs/theme/2020/templates/thank-you.html
@@ -14,6 +14,21 @@
             content="{{ page.description }}">
       <meta name="keywords"
             content="{{ page.keywords }}">
+      <meta name="url"
+            property="og:url"
+            content="{{ SITEURL }}/{{ page.url }}">
+      <meta name="title"
+            property="og:title"
+            content="{{ page.title }} | {{ SITENAME }}">
+      <meta name="description"
+            property="og:description"
+            content="{{ page.description }}">
+      <meta name="image"
+            property="og:image"
+            content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+      <meta name="type"
+            property="og:type"
+            content="website">
       <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async
                 src="https://www.googletagmanager.com/gtag/js?id=UA-22974464-4">
