airs\refac(front): #3410 replace fluid logo
- Changed the fluid attacks logo to a .png


Former-commit-id: 3d1bca9f630ac8d02d802827f4a0caa1c8a645be

--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -174,7 +174,7 @@
               <div class="h-100 w-30 dib tc">
                 <div class="w-100 vh-25 justify-center items-center flex">
                   <img loading="lazy" class="h-logo"
-                  src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
+                  src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/fluid-attacks-logo.png" alt="Young hacker smiling">
                 </div>
                 <div class="w-100 vh-50 justify-center items-center flex">
                   <ul class="list f3 fw7 tc ph0">
@@ -524,7 +524,7 @@
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
           <img loading="lazy" class="h-logo ml3 pv2"
-            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/fluid-attacks-logo.png" alt="Young hacker smiling">
         </a>
       </li>
       <li class="relative fr pv4 db-l dn">
