--- a/airs/theme/2020/templates/author.html
+++ b/airs/theme/2020/templates/author.html
@@ -20,7 +20,7 @@
         Information Security.">
   <meta name="image"
         property="og:image"
-        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/fluid-attacks-logo.png">
   <meta name="type"
         property="og:type"
         content="website">
