--- a/airs/theme/2020/templates/index.html
+++ b/airs/theme/2020/templates/index.html
@@ -19,7 +19,7 @@
         and ethical hacking recent trends.">
   <meta name="image"
         property="og:image"
-        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+        content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/fluid-attacks-logo.png">
   <meta name="type"
         property="og:type"
         content="website">
