--- a/airs/theme/2020/templates/solution.html
+++ b/airs/theme/2020/templates/solution.html
@@ -15,7 +15,7 @@
       content="{{ page.description }}">
 <meta name="image"
       property="og:image"
-      content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg">
+      content="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/fluid-attacks-logo.png">
 <meta name="type"
       property="og:type"
       content="website">
