airs\fix(cross): #3357 fix asserts button
- Fixed styles on the Asserts button
- Fixed link to the Asserts documentation


Former-commit-id: a7e982033e9044912b498f1ecb84885aa31de8a0

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -743,10 +743,11 @@ video {
 
 .button-asserts {
   a {
-    color: white;
-    text-decoration: none;
+    color: white !important;
+    text-decoration: none !important;
+    border: none !important;
     &:hover {
-      color: white;;
+      color: white !important;
     }
   }
 }
