airs\fix(front): #3378 fix position of button
- Fixed the position of the X button in the desktop menu


Former-commit-id: 082974c8b1c6a96f9cec06d8775a7b282f9b5dc3

--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -12,7 +12,7 @@
           <div id="mySidenavXl" class="sidenav bg-white fixed h-100 w-100 top-0 left-0 z-100 overflow-y-auto dn fadein">
             <div class="mw-1366 ph-body center flex">
               <div class="h-100 w-10 dib">
-                <span id="closebtn" class="pointer relative fl pl-body pv4 mv2">
+                <span id="closebtn" class="pointer relative fl pv4 mv2">
                   <img
                   class="w2"
                   src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/cross.png"
