airs\refac(cross): #3382.4 merge products
- Move Asserts into products/


Former-commit-id: 62dae12e197d5116bcc24934f199686c7bd4fee5

--- a/airs/theme/2020/templates/page.html
+++ b/airs/theme/2020/templates/page.html
@@ -151,6 +151,15 @@
         <span class="c-fluid-gray v-mid b"> / </span>
       </li>
       {% endif %}
+      {% if page.assertsindex %}
+      <li class="dib mt0" >
+        <a class="c-fluid-gray hover-white no-underline"
+          href="{{ SITEURL }}/products/">
+            Products
+        </a>
+        <span class="c-fluid-gray v-mid b"> / </span>
+      </li>
+      {% endif %}
       {% if page.usecasespage %}
       <li class="dib mt0" >
         <a class="c-fluid-gray hover-white no-underline"
