--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -114,7 +114,7 @@
       <p class="fw3 f4 c-fluid-bk">
         It automates attacks to verify the status of vulnerabilities on your system
       </p>
-      <a href="{{ SITEURL }}/asserts/">
+      <a href="{{ SITEURL }}/products/asserts/">
         <button
           class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
           Go to Asserts
